src/main/gen/PlayPlusParser.java
// Generated from C:/Users/samiq/Documents/GitHub/2021_INFOB314_G10/src/main/antlr4/be/unamur/info/b314/compiler\PlayPlus.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PlayPlusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, SKIPA=2, AFFECT=3, LPAR=4, RPAR=5, COMMA=6, PLUS=7, MINUS=8, 
		MOD=9, MULT=10, DIV=11, SEMICOLON=12, EQUALS=13, COLON=14, LTHAN=15, MTHAN=16, 
		LBRA=17, RBRA=18, WLD=19, COMPUTE=20, IF=21, THEN=22, ELSE=23, WHILE=24, 
		SET=25, TO=26, NEXT=27, IMPORT=28, FUNCTION=29, RETURN=30, LATITUDE=31, 
		LONGITUDE=32, GRID=33, SIZE=34, MAP=35, RADIO=36, AMMO=37, FRUITS=38, 
		SODA=39, COUNT=40, LIFE=41, TRUE=42, FALSE=43, ENNEMI=44, IS=45, NORTH=46, 
		SOUTH=47, EAST=48, WEST=49, GRAAL=50, OR=51, NOT=52, DIRT=53, ROCK=54, 
		VINES=55, ZOMBIE=56, PLAYER=57, NEARBY=58, MOVE=59, SHOOT=60, USE=61, 
		NOTHING=62, AS=63, DECLARE=64, AND=65, RETAIN=66, BY=67, DEFAULT=68, LOCAL=69, 
		DO=70, DONE=71, WHEN=72, YOUR=73, TURN=74, BOOLEAN=75, INTEGER=76, SQUARE=77, 
		VOID=78, FILEDECL=79, ID=80, FILENAME=81, NUMBER=82, NEWLINE=83, WS=84, 
		LETTER=85, DIGIT=86;
	public static final int
		RULE_root = 0, RULE_instruction = 1, RULE_impDecl = 2, RULE_fileDecl = 3, 
		RULE_fileName = 4, RULE_programmemonde = 5, RULE_programmestrat = 6, RULE_clauseDefault = 7, 
		RULE_clauseWhen = 8, RULE_varDecl = 9, RULE_type = 10, RULE_scalar = 11, 
		RULE_array = 12, RULE_fctDecl = 13, RULE_exprG = 14, RULE_exprD = 15, 
		RULE_exprEnt = 16, RULE_exprBool = 17, RULE_exprCase = 18, RULE_action = 19, 
		RULE_comment = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "instruction", "impDecl", "fileDecl", "fileName", "programmemonde", 
			"programmestrat", "clauseDefault", "clauseWhen", "varDecl", "type", "scalar", 
			"array", "fctDecl", "exprG", "exprD", "exprEnt", "exprBool", "exprCase", 
			"action", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'skip'", "'affect'", "'('", "')'", "','", "'+'", "'-'", 
			"'%'", "'*'", "'/'", "';'", "'='", "':'", "'<'", "'>'", "'['", "']'", 
			"'.wld'", "'compute'", "'if'", "'then'", "'else'", "'while'", "'set'", 
			"'to'", "'next'", "'import'", "'function'", "'return'", "'latitude'", 
			"'longitude'", "'grid'", "'size'", "'map'", "'radio'", "'ammo'", "'fruits'", 
			"'soda'", "'count'", "'life'", "'true'", "'false'", "'ennemi'", "'is'", 
			"'north'", "'south'", "'east'", "'west'", "'graal'", "'or'", "'not'", 
			"'dirt'", "'rock'", "'vines'", "'zombie'", "'player'", "'nearby'", "'move'", 
			"'shoot'", "'use'", "'nothing'", "'as'", "'declare'", "'and'", "'retain'", 
			"'by'", "'default'", "'local'", "'do'", "'done'", "'when'", "'your'", 
			"'turn'", "'boolean'", "'integer'", "'square'", "'void'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "SKIPA", "AFFECT", "LPAR", "RPAR", "COMMA", "PLUS", 
			"MINUS", "MOD", "MULT", "DIV", "SEMICOLON", "EQUALS", "COLON", "LTHAN", 
			"MTHAN", "LBRA", "RBRA", "WLD", "COMPUTE", "IF", "THEN", "ELSE", "WHILE", 
			"SET", "TO", "NEXT", "IMPORT", "FUNCTION", "RETURN", "LATITUDE", "LONGITUDE", 
			"GRID", "SIZE", "MAP", "RADIO", "AMMO", "FRUITS", "SODA", "COUNT", "LIFE", 
			"TRUE", "FALSE", "ENNEMI", "IS", "NORTH", "SOUTH", "EAST", "WEST", "GRAAL", 
			"OR", "NOT", "DIRT", "ROCK", "VINES", "ZOMBIE", "PLAYER", "NEARBY", "MOVE", 
			"SHOOT", "USE", "NOTHING", "AS", "DECLARE", "AND", "RETAIN", "BY", "DEFAULT", 
			"LOCAL", "DO", "DONE", "WHEN", "YOUR", "TURN", "BOOLEAN", "INTEGER", 
			"SQUARE", "VOID", "FILEDECL", "ID", "FILENAME", "NUMBER", "NEWLINE", 
			"WS", "LETTER", "DIGIT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlayPlus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlayPlusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(PlayPlusParser.DECLARE, 0); }
		public TerminalNode AND() { return getToken(PlayPlusParser.AND, 0); }
		public TerminalNode RETAIN() { return getToken(PlayPlusParser.RETAIN, 0); }
		public ProgrammestratContext programmestrat() {
			return getRuleContext(ProgrammestratContext.class,0);
		}
		public ProgrammemondeContext programmemonde() {
			return getRuleContext(ProgrammemondeContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(DECLARE);
			setState(43);
			match(AND);
			setState(44);
			match(RETAIN);
			setState(47);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(45);
				programmestrat();
				}
				break;
			case 2:
				{
				setState(46);
				programmemonde();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	 
		public InstructionContext() { }
		public void copyFrom(InstructionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ComputeInstContext extends InstructionContext {
		public TerminalNode COMPUTE() { return getToken(PlayPlusParser.COMPUTE, 0); }
		public ExprDContext exprD() {
			return getRuleContext(ExprDContext.class,0);
		}
		public ComputeInstContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterComputeInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitComputeInst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitComputeInst(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ActionInstContext extends InstructionContext {
		public TerminalNode NEXT() { return getToken(PlayPlusParser.NEXT, 0); }
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public ActionInstContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterActionInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitActionInst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitActionInst(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileInstContext extends InstructionContext {
		public TerminalNode WHILE() { return getToken(PlayPlusParser.WHILE, 0); }
		public ExprDContext exprD() {
			return getRuleContext(ExprDContext.class,0);
		}
		public TerminalNode DO() { return getToken(PlayPlusParser.DO, 0); }
		public TerminalNode DONE() { return getToken(PlayPlusParser.DONE, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public WhileInstContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterWhileInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitWhileInst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitWhileInst(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfElseInstContext extends InstructionContext {
		public TerminalNode IF() { return getToken(PlayPlusParser.IF, 0); }
		public ExprDContext exprD() {
			return getRuleContext(ExprDContext.class,0);
		}
		public TerminalNode THEN() { return getToken(PlayPlusParser.THEN, 0); }
		public TerminalNode ELSE() { return getToken(PlayPlusParser.ELSE, 0); }
		public TerminalNode DONE() { return getToken(PlayPlusParser.DONE, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public IfElseInstContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterIfElseInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitIfElseInst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitIfElseInst(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SkipInstContext extends InstructionContext {
		public TerminalNode SKIPA() { return getToken(PlayPlusParser.SKIPA, 0); }
		public SkipInstContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterSkipInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitSkipInst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitSkipInst(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfInstContext extends InstructionContext {
		public TerminalNode IF() { return getToken(PlayPlusParser.IF, 0); }
		public ExprDContext exprD() {
			return getRuleContext(ExprDContext.class,0);
		}
		public TerminalNode THEN() { return getToken(PlayPlusParser.THEN, 0); }
		public TerminalNode DONE() { return getToken(PlayPlusParser.DONE, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public IfInstContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterIfInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitIfInst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitIfInst(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AffectInstrContext extends InstructionContext {
		public TerminalNode SET() { return getToken(PlayPlusParser.SET, 0); }
		public ExprGContext exprG() {
			return getRuleContext(ExprGContext.class,0);
		}
		public TerminalNode TO() { return getToken(PlayPlusParser.TO, 0); }
		public ExprDContext exprD() {
			return getRuleContext(ExprDContext.class,0);
		}
		public AffectInstrContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterAffectInstr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitAffectInstr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitAffectInstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruction);
		int _la;
		try {
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new SkipInstContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				match(SKIPA);
				}
				break;
			case 2:
				_localctx = new IfInstContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				match(IF);
				setState(51);
				exprD(0);
				setState(52);
				match(THEN);
				setState(54); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(53);
					instruction();
					}
					}
					setState(56); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SKIPA) | (1L << COMPUTE) | (1L << IF) | (1L << WHILE) | (1L << SET) | (1L << NEXT))) != 0) );
				setState(58);
				match(DONE);
				}
				break;
			case 3:
				_localctx = new IfElseInstContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				match(IF);
				setState(61);
				exprD(0);
				setState(62);
				match(THEN);
				setState(64); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(63);
					instruction();
					}
					}
					setState(66); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SKIPA) | (1L << COMPUTE) | (1L << IF) | (1L << WHILE) | (1L << SET) | (1L << NEXT))) != 0) );
				setState(68);
				match(ELSE);
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(69);
					instruction();
					}
					}
					setState(72); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SKIPA) | (1L << COMPUTE) | (1L << IF) | (1L << WHILE) | (1L << SET) | (1L << NEXT))) != 0) );
				setState(74);
				match(DONE);
				}
				break;
			case 4:
				_localctx = new WhileInstContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(76);
				match(WHILE);
				setState(77);
				exprD(0);
				setState(78);
				match(DO);
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(79);
					instruction();
					}
					}
					setState(82); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SKIPA) | (1L << COMPUTE) | (1L << IF) | (1L << WHILE) | (1L << SET) | (1L << NEXT))) != 0) );
				setState(84);
				match(DONE);
				}
				break;
			case 5:
				_localctx = new AffectInstrContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				match(SET);
				setState(87);
				exprG();
				setState(88);
				match(TO);
				setState(89);
				exprD(0);
				}
				break;
			case 6:
				_localctx = new ComputeInstContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(91);
				match(COMPUTE);
				setState(92);
				exprD(0);
				}
				break;
			case 7:
				_localctx = new ActionInstContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(93);
				match(NEXT);
				setState(94);
				action();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImpDeclContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(PlayPlusParser.IMPORT, 0); }
		public TerminalNode FILEDECL() { return getToken(PlayPlusParser.FILEDECL, 0); }
		public ImpDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterImpDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitImpDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitImpDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpDeclContext impDecl() throws RecognitionException {
		ImpDeclContext _localctx = new ImpDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_impDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(IMPORT);
			setState(98);
			match(FILEDECL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileDeclContext extends ParserRuleContext {
		public FileNameContext fileName() {
			return getRuleContext(FileNameContext.class,0);
		}
		public TerminalNode WLD() { return getToken(PlayPlusParser.WLD, 0); }
		public FileDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fileDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterFileDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitFileDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitFileDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileDeclContext fileDecl() throws RecognitionException {
		FileDeclContext _localctx = new FileDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fileDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			fileName();
			setState(101);
			matchWildcard();
			setState(102);
			match(WLD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileNameContext extends ParserRuleContext {
		public List<TerminalNode> LETTER() { return getTokens(PlayPlusParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(PlayPlusParser.LETTER, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(PlayPlusParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(PlayPlusParser.DIGIT, i);
		}
		public FileNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fileName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterFileName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitFileName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitFileName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileNameContext fileName() throws RecognitionException {
		FileNameContext _localctx = new FileNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fileName);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(LETTER);
			setState(108);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(105);
					_la = _input.LA(1);
					if ( !(_la==LETTER || _la==DIGIT) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgrammemondeContext extends ParserRuleContext {
		public ClauseDefaultContext clauseDefault() {
			return getRuleContext(ClauseDefaultContext.class,0);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(PlayPlusParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(PlayPlusParser.SEMICOLON, i);
		}
		public List<FctDeclContext> fctDecl() {
			return getRuleContexts(FctDeclContext.class);
		}
		public FctDeclContext fctDecl(int i) {
			return getRuleContext(FctDeclContext.class,i);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public ProgrammemondeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programmemonde; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterProgrammemonde(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitProgrammemonde(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitProgrammemonde(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgrammemondeContext programmemonde() throws RecognitionException {
		ProgrammemondeContext _localctx = new ProgrammemondeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_programmemonde);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				setState(115);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(111);
					varDecl();
					setState(112);
					match(SEMICOLON);
					}
					break;
				case 2:
					{
					setState(114);
					fctDecl();
					}
					break;
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SKIPA) | (1L << COMPUTE) | (1L << IF) | (1L << WHILE) | (1L << SET) | (1L << NEXT))) != 0)) {
				{
				{
				setState(120);
				instruction();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			clauseDefault();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
